--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,9 +25,11 @@
                 <p class="card-text">
                     Esti curios cu ce te putem ajuta? Mai jos gasesti o lista cu toate departamentele noastre!
                 </p>
-                <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
-                    Vezi lista
-                </button>
+                <a href="/Departments/Index">
+                    <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                        Vezi lista
+                    </button>
+                </a>
             </div>
 
         </div>
@@ -36,10 +38,11 @@
             <div class="card-body">
                 <h5 class="card-title">Locatii</h5>
                 <p class="card-text">Nu esti sigur daca avem cabinet in orasul tau? Verifica lista de mai jos!</p>
-
-                <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
-                    Vezi lista
-                </button>
+                <a href="/Locations/Index">
+                    <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                        Vezi lista
+                    </button>
+                </a>
             </div>
 
 
@@ -51,10 +54,11 @@
                 <p class="card-text">
                     Ai aflat ca ai nevoie de o investigatie dar nu stii unde sa mergi? Probabil te putem ajuta noi!
                 </p>
-
-                <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
-                    Vezi lista
-                </button>
+                <a href="/Investigations/Index">
+                    <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                        Vezi lista
+                    </button>
+                </a>
             </div>
 
 
