--- a/Views/Investigations/New.cshtml
+++ b/Views/Investigations/New.cshtml
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                                    <img src="https://cdn.dribbble.com/users/1044993/screenshots/11221617/media/1c8967ae3d3ef8bc872b5271367a07f0.png?compress=1&resize=400x300&vertical=top"
+                                    <img src="https://www.wilmingtoncityschools.com/pages/district-news/image/section-image/COVID-19%20Notification-342.png"
                                          class="img-fluid" alt="Sample image" />
 
                                 </div>
