--- a/Views/LocationDepartments/Index.cshtml
+++ b/Views/LocationDepartments/Index.cshtml
@@ -1,29 +1,53 @@
-﻿@model MedOffice.Models.LocationDepartment 
+﻿@model MedOffice.Models.LocationDepartment
 @{
     ViewBag.Title = "Idex";
 }
 
-<h2>Idex</h2>
-@if (ViewBag.LocationDepartmentsCount != 0)
-{
-    foreach (var locdep in ViewBag.LocDeps)
-    {
-        <h2>@locdep.Location.Address</h2>
-        foreach(var locdep2 in ViewBag.Locdeps)
-        {
-            if (locdep.Location == locdep2.Location)
-            {
-                <p>@locdep2.Department.DepartmentName</p>
-            }
-        }
-
-
+<body style="background-color: #eee">
+    <section class="vh-100">
         <br />
-    }
+        <br />
+        <div class="input-group rounded d-flex flex-row-reverse">
+            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+            <span class="input-group-text border-0" id="search-addon">
+                <i class="fas fa-search"></i>
+            </span>
+        </div>
+        <div class="container h-100 align-content-center align-items-center" style="border-radius: 15px;">
+            
 
-}
+            <ul class="list-group list-group-light align-content-center align-items-center" style="border-radius: 15px; padding:100px">
 
-<a href="/LocationDepartments/Index/">Afisare lista locatii si departamente </a>
-<br />
-<a href="/LocationDepartments/New">Asociaza Locatie cu Departament</a>
-<br />
+                @if (ViewBag.LocationDepartmentsCount != 0)
+                {
+                    foreach (var locdep in ViewBag.LocDeps)
+                    {
+                        <h2>@locdep.Location.Address</h2>
+                        <ul class="list-group">
+                            @foreach (var locdep2 in ViewBag.Locdeps)
+                            {
+
+                                if (locdep.Location == locdep2.Location)
+                                {
+                                    <li class="list-group-item">@locdep2.Department.DepartmentName</li>
+                                }
+                            }
+                        </ul>
+
+                    }
+
+
+                    <br />
+                }
+
+
+
+                <a href="/LocationDepartments/Index/">Afisare lista locatii si departamente </a>
+                <br />
+                <a href="/LocationDepartments/New">Asociaza Locatie cu Departament</a>
+                <br />
+            </ul>
+        </div>
+    </section>
+
+</body>
