--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -42,13 +42,17 @@
                                            href="/Users/Edit/@user.Id"
                                            role="button"
                                            data-ripple-color="primary">
-                                            Editeaza
+                                            <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                                                Editeaza
+                                            </button>
                                         </a>
                                         <a class="btn btn-link m-0 text-reset"
                                            href="/Users/Show/@user.Id"
                                            role="button"
                                            data-ripple-color="primary">
-                                            Arata
+                                            <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                                                Arata
+                                            </button>
                                         </a>
 
 
